updated login banner

--- a/config_contexts/platform_ios.yml
+++ b/config_contexts/platform_ios.yml
@@ -7,9 +7,9 @@ banners:
     #                                   #
     #####################################
   - login: |
-    ************************************
-    *           LOGIN BANNER           *
-    ************************************
+    ####################################
+    #           LOGIN BANNER           #
+    ####################################
 ip:
   access_lists:
     standard:
