--- a/config_contexts/role_edgerouter.yml
+++ b/config_contexts/role_edgerouter.yml
@@ -1,4 +1,9 @@
 ---
+_metadata:
+  name: Edge Router
+  weight: 1000
+  description: Default settings for all edge router roles
+  is_active: true
 bgp:
   asn: 64512
 ...
