--- a/config_contexts/platform_ios.yml
+++ b/config_contexts/platform_ios.yml
@@ -6,6 +6,9 @@ _metadata:
   is_active: true
   platforms:
     - slug: cisco-ios
+domain:
+  name: sot.lab
+  lookup: False
 banners:
   - motd: |
       #####################################
@@ -22,10 +25,10 @@ ip:
         rules:
           - action: permit
             source: 192.168.1.0/24
-            logging: true
+            logging: True
           - action: permit
             source: 192.168.99.0/24
-            logging: false
+            logging: False
 ntp:
   servers:
     - 1.2.3.4
