--- a/config_contexts/role_edgerouter.yml
+++ b/config_contexts/role_edgerouter.yml
@@ -23,6 +23,10 @@ ip:
               protocol: tcp
               logging: True
             - action: permit
-              source: 192.168.99.0/24
+              protocol: ip
+              source: 
+                address: 0.0.0.0/0
+              destination:
+                address: 0.0.0.0/0
               logging: False
 ...
